Add and refactor array and BFS/DFS solutions
Added new array problems: RearrangeArrayElementsBySign and SmallestValueOfTheRearrangedNumber. Refactored and improved solutions for MaximumSubarray, SetMatrixZeros, RotateArray, SpiralMatrix, and SlidingWindowMaximum. Moved several recursion-based problems to BFSAndDFS package, added new BFS/DFS solutions (GenerateParentheses, NQueens), and introduced new data structure implementations (LFUCache, TopKFrequentWords, FindMedianFromDataStream, Trie variants). Removed deprecated or duplicate files and improved code clarity and comments throughout.